--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.1.0",
+    "@types/lodash": "^4.17.16",
     "firebase": "^11.7.3",
+    "lodash": "^4.17.21",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
